# BrickGame_v2.0

./: README.md  makefile  test.cc
brick_game/: start_menu.cc
brick_game/snake/controller/: snake_controller.cc
brick_game/snake/model/: snake_model.cc
brick_game/tetris/: backend_tetris.cc  helper_tetris.cc  tetris.cc
gui/cli/: cli_tetris.cc  snake_view.cc
gui/desktop/snake/: CMakeLists.txt  DesktopSnake.cc  DesktopSnake.h  DesktopTetris.cc  DesktopTetris.h  main.cpp
includes/: backend_tetris.h  cli_tetris.h  define_snake.h  define_tetris.h  helper_tetris.h  objects_snake.h  objects_tetris.h  snake_controller.h  snake_model.h  snake_view.h  tetris.h
